--- a/libraries/tools/kotlin-source-map-loader/package.json
+++ b/libraries/tools/kotlin-source-map-loader/package.json
@@ -7,11 +7,16 @@
     "lib/**/*"
   ],
   "scripts": {
-    "build": "cpx \"kotlin-source-map-loader.js\" lib"
+    "build": "cpx \"kotlin-source-map-loader.js\" lib",
+    "test": "mocha -R spec"
   },
   "dependencies": {
+    "async": "^2.5.0",
+    "loader-utils": "^1.1.0"
   },
   "devDependencies": {
+    "mocha": "^5.0.5",
+    "should": "^13.2.1",
     "cpx": "^1.5.0"
   }
 }
